tests/baselines/reference/tsxAttributeResolution6.errors.txt
tests/cases/conformance/jsx/file.tsx(10,8): error TS2322: Type '{ s: 为真; }' is not assignable to type '{ n?: 真假; s?: 文字; }'.
  Types of property 's' are incompatible.
    Type '为真' is not assignable to type '文字'.
tests/cases/conformance/jsx/file.tsx(11,8): error TS2322: Type '{ n: "true"; }' is not assignable to type '{ n?: 真假; s?: 文字; }'.
  Types of property 'n' are incompatible.
    Type '"true"' is not assignable to type '真假'.
tests/cases/conformance/jsx/file.tsx(12,1): error TS2322: Type '{}' is not assignable to type '{ n: 真假; }'.
  Property 'n' is missing in type '{}'.


==== tests/cases/conformance/jsx/file.tsx (3 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: { n?: boolean; s?: string};
    		test2: { n: boolean; };
    	}
    }
    
    // Error
    <test1 s />;
           ~
!!! error TS2322: Type '{ s: 为真; }' is not assignable to type '{ n?: 真假; s?: 文字; }'.
!!! error TS2322:   Types of property 's' are incompatible.
!!! error TS2322:     Type '为真' is not assignable to type '文字'.
    <test1 n='true' />;
           ~~~~~~~~
!!! error TS2322: Type '{ n: "true"; }' is not assignable to type '{ n?: 真假; s?: 文字; }'.
!!! error TS2322:   Types of property 'n' are incompatible.
!!! error TS2322:     Type '"true"' is not assignable to type '真假'.
    <test2 />;
    ~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ n: 真假; }'.
!!! error TS2322:   Property 'n' is missing in type '{}'.
    
    // OK
    <test1 n />;
    <test1 n={false} />;
    <test2 n />;
    